// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Header Colored 1`] = `
.c10 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c10 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c17 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #6D6E70;
}

.c17 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #6D6E70;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  color: inherit;
}

.c8 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  color: #FFF;
}

.c13 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c4 {
  color: inherit;
}

.c4 svg {
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #FFF;
  margin-left: 65px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #FFF;
  margin-left: 65px;
}

.c9 > span {
  margin-left: 10px;
  display: inline;
  font-size: 15px;
}

.c7 {
  width: 30px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: auto;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  color: #FFF;
  background-color: #FFF;
  box-shadow: 0 0 10px 0 rgba(122,122,122,0.5);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 95px;
  padding: 0 90px;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  background-color: #6D6E70;
  height: 75px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
  max-width: 1600px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3 > div,
.c3 > a {
  -webkit-flex: 0 1 480px;
  -ms-flex: 0 1 480px;
  flex: 0 1 480px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 90px;
  height: 45px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  width: 100%;
  max-width: 1600px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c16 {
  margin-top: 12px;
  margin-right: 58px;
  border-bottom: 2px solid #6D6E70;
}

.c16:hover {
  border-bottom: 2px solid #6D6E70;
}

.c18 {
  margin-top: 12px;
  margin-right: 58px;
}

.c18:hover {
  border-bottom: 2px solid #6D6E70;
}

.c12 {
  width: 36px;
  cursor: pointer;
  display: none;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {
  .c6 {
    margin-left: 17px;
  }
}

@media screen and (max-width:991px) {
  .c6 {
    display: none;
  }
}

@media screen and (max-width:991px) {
  .c11 {
    margin-left: 17px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:991px) {
  .c9 {
    display: none;
  }
}

@media screen and (max-width:991px) {
  .c7 {
    margin-left: 17px;
    width: 36px;
  }
}

@media screen and (max-width:767px) {
  .c7 {
    width: 20px;
  }
}

@media screen and (max-width:1199px) {
  .c1 {
    padding: 0px 50px;
    height: 75px;
  }
}

@media screen and (max-width:991px) {
  .c1 {
    padding: 0px 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    padding: 0px 20px;
    height: 70px;
  }
}

@media screen and (max-width:1199px) {
  .c3 > div,
  .c3 > a {
    -webkit-flex: 0 1 345px;
    -ms-flex: 0 1 345px;
    flex: 0 1 345px;
  }
}

@media screen and (max-width:767px) {
  .c3 > div,
  .c3 > a {
    -webkit-flex: 0 1 200px;
    -ms-flex: 0 1 200px;
    flex: 0 1 200px;
  }
}

@media screen and (max-width:1199px) {
  .c14 {
    padding: 0 50px;
  }
}

@media screen and (max-width:991px) {
  .c14 {
    display: none;
  }
}

@media screen and (max-width:991px) {
  .c12 {
    margin-left: 17px;
    display: block;
  }
}

@media screen and (max-width:767px) {
  .c12 {
    width: 20px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "grey",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            color="inherit"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 300 22"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <title>
                3A0A9E44-AD49-492A-86D1-A802067D00CA
              </title>
              <defs>
                <path
                  d="M0 0h18.062v21.743H0z"
                />
                <path
                  d="M0 21.743h300V0H0z"
                />
              </defs>
              <g
                fillRule="evenodd"
                transform="translate(0 .257)"
              >
                <path
                  d="M91.459.218v21.307h-2.524V3.199l.018-.639.015-.64h-.065l-.197.498c-.099.25-.164.412-.196.484l-.427 1-7.621 17.623h-2.524l-7.637-17.42-.443-.983-.197-.5a5.399 5.399 0 0 1-.197-.485h-.065l.016.578.016.594v18.216h-2.523V.218h4.376L77.25 14l.952 2.233.474 1.108.458 1.109h.066l.46-1.11c.23-.53.382-.899.459-1.107l.967-2.217L87.018.218h4.44ZM97.327 2.248v7.257h11.358v2.03H97.327v7.96h11.849v2.03H94.803V.218h14.373v2.03z"
                />
                <g
                  transform="translate(111.536)"
                >
                  <path
                    d="M15.555 14.407h2.507v.811c0 2.903-.52 4.718-1.557 5.44-1.037.724-3.65 1.085-7.834 1.085-3.748 0-6.13-.637-7.146-1.912S0 15.557 0 10.832c0-3.694.116-6.017.345-6.969.23-.953.885-1.803 1.966-2.552C3.579.436 6.317-.001 10.523-.001c2.851 0 4.772.422 5.76 1.264.989.844 1.484 2.472 1.484 4.886l.016.579h-2.507l-.016-.656c0-1.717-.293-2.821-.878-3.31-.585-.489-1.903-.733-3.957-.733-3.607 0-5.808.286-6.606.858-.797.573-1.196 2.16-1.196 4.761 0 5.983.267 9.49.803 10.52.535 1.03 2.367 1.545 5.49 1.545 2.972 0 4.827-.223 5.565-.67.738-.448 1.106-1.57 1.106-3.371l-.032-1.265Z"
                    mask="url(#b)"
                  />
                </g>
                <path
                  d="M150.576.218v21.307h-2.523v-9.881h-13.08v9.88h-2.523V.219h2.524v9.397h13.079V.218zM167.834 15.203l-4.965-13.018-4.9 13.018h9.865Zm.738 1.81h-11.325l-1.721 4.512h-2.672L161.05.217h3.54l8.359 21.308h-2.64l-1.737-4.511ZM183.043 2.45v19.074h-2.522V2.451h-7.295V.218h17.047V2.45zM195.043 10.864h7.292c1.924 0 3.236-.278 3.935-.836.7-.556 1.05-1.605 1.05-3.146 0-1.923-.262-3.178-.78-3.76-.52-.584-1.63-.874-3.336-.874h-8.161v8.616Zm-2.525 10.66V.219h10.653c2.405 0 4.098.452 5.08 1.359.984.904 1.477 2.476 1.477 4.713 0 1.967-.268 3.337-.804 4.114-.536.774-1.557 1.276-3.065 1.505v.046c2.37.168 3.558 1.542 3.558 4.121v5.449h-2.525v-4.902c0-2.487-1.13-3.73-3.392-3.73h-8.457v8.632h-2.525ZM221.593 2.028c-3.54 0-5.61.375-6.212 1.125-.601.748-.901 3.318-.901 7.711 0 4.401.3 6.976.9 7.726.603.75 2.673 1.124 6.213 1.124 3.551 0 5.629-.374 6.227-1.124.603-.75.902-3.325.902-7.726v-1.39l-.016-2.013c0-2.352-.415-3.846-1.246-4.48-.829-.635-2.786-.953-5.867-.953M221.61 0c4.23 0 6.873.588 7.933 1.762 1.06 1.177 1.59 4.118 1.59 8.82 0 5.068-.507 8.195-1.524 9.382-1.016 1.186-3.682 1.779-7.999 1.779-4.294 0-6.957-.587-7.99-1.764-1.033-1.175-1.548-4.215-1.548-9.115v-1.5l.032-2.013c0-2.829.67-4.763 2.009-5.798C215.45.517 217.949 0 221.609 0M253.127.218v21.307h-4.147l-9.376-14.5-1.523-2.39-.754-1.186-.753-1.186h-.067l.017.796.015.812v17.654h-2.521V.218h4.129l8.177 12.707 2.13 3.34 1.067 1.655 1.05 1.67h.063l-.015-.796-.017-.813V.218z"
                />
                <path
                  d="M257.389 21.525h2.522V.22h-2.522zM278.892 14.407h2.506v.811c0 2.903-.517 4.718-1.555 5.44-1.04.724-3.65 1.085-7.835 1.085-3.748 0-6.13-.637-7.145-1.912-1.017-1.275-1.526-4.274-1.526-8.999 0-3.694.116-6.017.345-6.969.23-.953.886-1.803 1.966-2.552 1.267-.875 4.006-1.312 8.213-1.312 2.851 0 4.772.422 5.76 1.264.99.844 1.482 2.472 1.482 4.886l.019.579h-2.509l-.016-.656c0-1.717-.293-2.821-.877-3.31-.586-.489-1.904-.733-3.96-.733-3.605 0-5.804.286-6.604.858-.796.573-1.196 2.16-1.196 4.761 0 5.983.267 9.49.803 10.52.536 1.03 2.367 1.545 5.49 1.545 2.973 0 4.827-.223 5.565-.67.738-.448 1.105-1.57 1.105-3.371l-.031-1.265ZM299.592 5.994h-2.509c0-1.718-.3-2.808-.902-3.271-.599-.463-2.013-.694-4.243-.694-2.645 0-4.35.22-5.113.663-.766.442-1.15 1.429-1.15 2.958 0 1.718.303 2.763.903 3.137.6.376 2.388.63 5.36.765 3.485.145 5.7.567 6.646 1.265.944.697 1.417 2.258 1.417 4.682 0 2.623-.543 4.32-1.631 5.09-1.087.769-3.488 1.154-7.204 1.154-3.221 0-5.367-.387-6.432-1.163-1.065-.775-1.598-2.339-1.598-4.69l-.016-.952h2.508v.53c0 1.904.305 3.088.917 3.551.612.464 2.18.695 4.705.695 2.894 0 4.675-.231 5.342-.695.665-.463.999-1.698.999-3.706 0-1.302-.227-2.168-.679-2.6-.453-.431-1.403-.69-2.844-.772l-2.623-.124-2.49-.126c-3.792-.25-5.688-2.123-5.688-5.62 0-2.424.552-4.042 1.656-4.854C286.026.405 288.229 0 291.528 0c3.343 0 5.522.377 6.54 1.131 1.016.755 1.524 2.375 1.524 4.863M32.047 8.433l-2.336-.168c-1.494-.11-2.243-.168-2.243-1.797 0-1.08.156-1.74 3.228-1.74 2.247 0 3.088 0 3.088 2.11v.056h5.508v-.93c0-5.956-4.177-5.956-8.596-5.956-5.576 0-8.961.438-8.961 6.489 0 5.864 2.904 6.064 7.715 6.396l1.987.131c2.456.157 2.713.173 2.713 1.898 0 1.732-.843 1.878-3.454 1.878-2.777 0-3.48-.23-3.48-2.354v-.057h-5.509v.057c0 7.08 3.77 7.08 8.99 7.08 4.175 0 6.729-.67 8.032-2.113 1.153-1.275 1.153-3.021 1.153-4.707v-.149c0-4.902-1.575-5.669-7.835-6.124M13.301 8.195H5.776V.344H0v21.181h5.776v-8.317H13.3v8.317h5.775V.344h-5.775zM48.297 5.341h4.73c1.362 0 2.303.257 2.584.702.172.277.576 1.31.576 4.901 0 3.325-.404 4.426-.645 4.785-.333.499-1.31.774-2.752.774h-4.493V5.341ZM60.06 2.383C58.746 1.016 56.51.322 53.427.322H42.515v21.203h11.03c3.569 0 5.844-.815 6.959-2.489 1.024-1.544 1.523-4.75 1.523-9.798 0-3.237-.642-5.477-1.966-6.855Z"
                  mask="url(#d)"
                />
              </g>
            </svg>
          </div>
        </div>
        <nav
          className="c5"
        >
          <a
            href="/"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M0 0h23.795v23.795H0z"
                      />
                    </defs>
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
                        fill="currentColor"
                      />
                      <g
                        transform="translate(13.308 1)"
                      >
                        <path
                          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
                          fill="currentColor"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Carriere
                </span>
              </div>
            </div>
          </a>
          <a
            href="/"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M38.238 17.793H27.476a1.412 1.412 0 0 1-1.415-1.414c0-.809.657-1.415 1.415-1.415h10.762c.808 0 1.415.657 1.415 1.415s-.607 1.414-1.416 1.414Zm0 8.792H27.476a1.412 1.412 0 0 1-1.415-1.415c0-.757.657-1.414 1.415-1.414h10.762c.808 0 1.415.657 1.415 1.414 0 .758-.607 1.415-1.416 1.415Zm0 8.842H27.476a1.412 1.412 0 0 1-1.415-1.415c0-.808.657-1.414 1.415-1.414h10.762c.808 0 1.415.657 1.415 1.414 0 .758-.607 1.415-1.416 1.415Zm-18.139 2.476-3.385.758a2.328 2.328 0 0 1-2.173-.708c-.556-.606-1.212-1.414-1.566-2.071-1.718-2.93-2.627-6.72-2.627-10.712 0-3.991.909-7.78 2.627-10.66.354-.658 1.061-1.466 1.566-2.072.506-.607 1.365-.86 2.122-.708l3.386.657a1.461 1.461 0 0 1 1.111 1.92l-1.516 4.85c-.202.708-.909 1.113-1.617 1.011l-2.627-.303c-.505 1.718-.859 3.183-.859 5.305 0 2.021.303 3.487.809 5.255l2.678-.354c.707-.101 1.414.354 1.617 1.01l1.566 4.851c.252.91-.253 1.769-1.112 1.97v.001ZM45.109 4H4.891A3.892 3.892 0 0 0 1 7.89V42.4a3.892 3.892 0 0 0 3.89 3.89h40.22A3.892 3.892 0 0 0 49 42.4V7.89A3.892 3.892 0 0 0 45.109 4Z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Contatti
                </span>
              </div>
            </div>
          </a>
          <a
            href="/"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M0 0h47.956v48H0z"
                      />
                    </defs>
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <g
                        transform="translate(1 1)"
                      >
                        <path
                          d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                          fill="currentColor"
                        />
                      </g>
                      <path
                        d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Ricerca
                </span>
              </div>
            </div>
          </a>
          <a
            href="/"
          >
            <div
              className="c11"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="currentColor"
                      fillRule="evenodd"
                    >
                      <path
                        d="M24 47.352C11.698 47.352 1.648 37.302 1.648 25S11.698 2.648 24 2.648 46.352 12.698 46.352 25 36.302 47.352 24 47.352ZM24 1C10.764 1 0 11.764 0 25s10.764 24 24 24 24-10.764 24-24S37.236 1 24 1Z"
                      />
                      <path
                        d="M16.115 24.224h7.117v-6.107c-2.201-.052-4.3-.31-6.195-.776-.512 2.121-.87 4.45-.922 6.883ZM17.447 15.84a29.01 29.01 0 0 0 5.785.724V5.904c-1.69.983-4.25 4.76-5.785 9.936ZM14.58 25.776H4.8c.154 4.037 1.536 7.711 3.738 10.765 1.484-1.76 3.89-3.157 6.86-4.037a35.544 35.544 0 0 1-.819-6.728ZM38.234 11.959A19.228 19.228 0 0 0 26.97 5.8c1.894 1.967 3.789 5.434 5.069 9.678 2.662-.828 4.863-2.07 6.195-3.52ZM16.883 32.09a30.431 30.431 0 0 1 6.35-.828v-5.486h-7.118c.052 2.226.308 4.348.768 6.314ZM23.232 44.2V32.815c-2.1.051-4.147.31-5.99.776 1.535 5.537 4.249 9.574 5.99 10.609ZM31.885 25.776h-7.117v5.486c2.253.052 4.403.31 6.349.828.46-1.966.717-4.088.768-6.314ZM24.768 5.904v10.66a29.007 29.007 0 0 0 5.786-.724c-1.587-5.175-4.096-8.953-5.786-9.936ZM9.51 37.783A18.861 18.861 0 0 0 20.929 44.2c-1.946-2.07-3.942-5.744-5.171-10.195-2.765.88-4.966 2.173-6.246 3.778ZM24.768 32.815v11.333c1.74-1.035 4.454-5.02 5.99-10.609a31.18 31.18 0 0 0-5.99-.724ZM30.963 17.34c-1.894.466-3.993.725-6.195.777v6.106h7.117c-.051-2.432-.41-4.76-.922-6.882ZM15.962 15.478c1.28-4.244 3.174-7.711 5.069-9.678-4.455.673-8.346 2.95-11.264 6.159 1.33 1.448 3.533 2.69 6.195 3.519ZM15.552 16.978c-2.867-.88-5.273-2.173-6.758-3.83-2.356 3.106-3.84 6.935-3.994 11.076h9.78c.05-2.536.409-4.968.972-7.245ZM32.602 32.504c2.97.931 5.376 2.329 6.86 4.037 2.202-3.054 3.584-6.728 3.738-10.765h-9.78a35.514 35.514 0 0 1-.819 6.728ZM32.192 34.005c-1.229 4.45-3.175 8.125-5.12 10.195 4.506-.725 8.5-3.053 11.418-6.417-1.28-1.605-3.482-2.898-6.298-3.778ZM33.42 24.224h9.78c-.154-4.14-1.639-7.97-3.994-11.075-1.536 1.656-3.89 2.95-6.758 3.83.563 2.276.922 4.709.973 7.245Z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Italia
                </span>
              </div>
            </div>
          </a>
          <div
            className="c12"
          >
            <span
              className="c13"
              color="white"
              size="100%"
            >
              <svg
                viewBox="0 0 50 50"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="currentColor"
                  fillRule="evenodd"
                >
                  <rect
                    height={3}
                    rx={1.5}
                    width={48}
                    x={1}
                    y={7}
                  />
                  <rect
                    height={3}
                    rx={1.5}
                    width={48}
                    x={1}
                    y={23}
                  />
                  <rect
                    height={3}
                    rx={1.5}
                    width={48}
                    x={1}
                    y={41}
                  />
                </g>
              </svg>
            </span>
          </div>
        </nav>
      </div>
    </div>
    <div
      className="c14"
    >
      <nav
        className="c15"
      >
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="primary"
              size="sm"
            >
              AZIENDA
            </span>
          </a>
        </div>
        <div
          className="c18"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="primary"
              size="sm"
            >
              PRODOTTI
            </span>
          </a>
        </div>
        <div
          className="c18"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="primary"
              size="sm"
            >
              SERVIZI
            </span>
          </a>
        </div>
        <div
          className="c18"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="primary"
              size="sm"
            >
              CASE HISTORY
            </span>
          </a>
        </div>
        <div
          className="c18"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="primary"
              size="sm"
            >
              HSD NEL MONDO
            </span>
          </a>
        </div>
        <div
          className="c18"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="primary"
              size="sm"
            >
              NEWS ED EVENTI
            </span>
          </a>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Header Transparent 1`] = `
.c10 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c10 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #FFF;
}

.c17 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c17 a {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #FFF;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  color: inherit;
}

.c8 > svg {
  height: 100%;
  width: 100%;
  color: inherit;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  color: #FFF;
}

.c13 > svg {
  height: 100%;
  width: 100%;
  color: white;
}

.c4 {
  color: inherit;
}

.c4 svg {
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #FFF;
  margin-left: 65px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #FFF;
  margin-left: 65px;
}

.c9 > span {
  margin-left: 10px;
  display: inline;
  font-size: 15px;
}

.c7 {
  width: 30px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: auto;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  color: #FFF;
  background-color: transparent;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 95px;
  padding: 0 90px;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  background-color: transparent;
  border-bottom: 1px solid rgba(244,244,244,0.2);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  width: 100%;
  max-width: 1600px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3 > div,
.c3 > a {
  -webkit-flex: 0 1 480px;
  -ms-flex: 0 1 480px;
  flex: 0 1 480px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 90px;
  height: 45px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  width: 100%;
  max-width: 1600px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c16 {
  margin-top: 12px;
  margin-right: 58px;
}

.c12 {
  width: 36px;
  cursor: pointer;
  display: none;
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {
  .c10 a {
    font-size: 14px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {

}

@media screen and (max-width:767px) {

}

@media screen and (max-width:991px) {
  .c6 {
    margin-left: 17px;
  }
}

@media screen and (max-width:991px) {
  .c6 {
    display: none;
  }
}

@media screen and (max-width:991px) {
  .c11 {
    margin-left: 17px;
  }
}

@media screen and (max-width:991px) {

}

@media screen and (max-width:991px) {
  .c9 {
    display: none;
  }
}

@media screen and (max-width:991px) {
  .c7 {
    margin-left: 17px;
    width: 36px;
  }
}

@media screen and (max-width:767px) {
  .c7 {
    width: 20px;
  }
}

@media screen and (max-width:1199px) {
  .c1 {
    padding: 0px 50px;
    height: 75px;
  }
}

@media screen and (max-width:991px) {
  .c1 {
    padding: 0px 25px;
  }
}

@media screen and (max-width:767px) {
  .c1 {
    padding: 0px 20px;
    height: 70px;
  }
}

@media screen and (max-width:1199px) {
  .c3 > div,
  .c3 > a {
    -webkit-flex: 0 1 345px;
    -ms-flex: 0 1 345px;
    flex: 0 1 345px;
  }
}

@media screen and (max-width:767px) {
  .c3 > div,
  .c3 > a {
    -webkit-flex: 0 1 200px;
    -ms-flex: 0 1 200px;
    flex: 0 1 200px;
  }
}

@media screen and (max-width:1199px) {
  .c14 {
    padding: 0 50px;
  }
}

@media screen and (max-width:991px) {
  .c14 {
    display: none;
  }
}

@media screen and (max-width:991px) {
  .c12 {
    margin-left: 17px;
    display: block;
  }
}

@media screen and (max-width:767px) {
  .c12 {
    width: 20px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "grey",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            color="inherit"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 300 22"
              xmlns="http://www.w3.org/2000/svg"
              xmlnsXlink="http://www.w3.org/1999/xlink"
            >
              <title>
                3A0A9E44-AD49-492A-86D1-A802067D00CA
              </title>
              <defs>
                <path
                  d="M0 0h18.062v21.743H0z"
                />
                <path
                  d="M0 21.743h300V0H0z"
                />
              </defs>
              <g
                fillRule="evenodd"
                transform="translate(0 .257)"
              >
                <path
                  d="M91.459.218v21.307h-2.524V3.199l.018-.639.015-.64h-.065l-.197.498c-.099.25-.164.412-.196.484l-.427 1-7.621 17.623h-2.524l-7.637-17.42-.443-.983-.197-.5a5.399 5.399 0 0 1-.197-.485h-.065l.016.578.016.594v18.216h-2.523V.218h4.376L77.25 14l.952 2.233.474 1.108.458 1.109h.066l.46-1.11c.23-.53.382-.899.459-1.107l.967-2.217L87.018.218h4.44ZM97.327 2.248v7.257h11.358v2.03H97.327v7.96h11.849v2.03H94.803V.218h14.373v2.03z"
                />
                <g
                  transform="translate(111.536)"
                >
                  <path
                    d="M15.555 14.407h2.507v.811c0 2.903-.52 4.718-1.557 5.44-1.037.724-3.65 1.085-7.834 1.085-3.748 0-6.13-.637-7.146-1.912S0 15.557 0 10.832c0-3.694.116-6.017.345-6.969.23-.953.885-1.803 1.966-2.552C3.579.436 6.317-.001 10.523-.001c2.851 0 4.772.422 5.76 1.264.989.844 1.484 2.472 1.484 4.886l.016.579h-2.507l-.016-.656c0-1.717-.293-2.821-.878-3.31-.585-.489-1.903-.733-3.957-.733-3.607 0-5.808.286-6.606.858-.797.573-1.196 2.16-1.196 4.761 0 5.983.267 9.49.803 10.52.535 1.03 2.367 1.545 5.49 1.545 2.972 0 4.827-.223 5.565-.67.738-.448 1.106-1.57 1.106-3.371l-.032-1.265Z"
                    mask="url(#b)"
                  />
                </g>
                <path
                  d="M150.576.218v21.307h-2.523v-9.881h-13.08v9.88h-2.523V.219h2.524v9.397h13.079V.218zM167.834 15.203l-4.965-13.018-4.9 13.018h9.865Zm.738 1.81h-11.325l-1.721 4.512h-2.672L161.05.217h3.54l8.359 21.308h-2.64l-1.737-4.511ZM183.043 2.45v19.074h-2.522V2.451h-7.295V.218h17.047V2.45zM195.043 10.864h7.292c1.924 0 3.236-.278 3.935-.836.7-.556 1.05-1.605 1.05-3.146 0-1.923-.262-3.178-.78-3.76-.52-.584-1.63-.874-3.336-.874h-8.161v8.616Zm-2.525 10.66V.219h10.653c2.405 0 4.098.452 5.08 1.359.984.904 1.477 2.476 1.477 4.713 0 1.967-.268 3.337-.804 4.114-.536.774-1.557 1.276-3.065 1.505v.046c2.37.168 3.558 1.542 3.558 4.121v5.449h-2.525v-4.902c0-2.487-1.13-3.73-3.392-3.73h-8.457v8.632h-2.525ZM221.593 2.028c-3.54 0-5.61.375-6.212 1.125-.601.748-.901 3.318-.901 7.711 0 4.401.3 6.976.9 7.726.603.75 2.673 1.124 6.213 1.124 3.551 0 5.629-.374 6.227-1.124.603-.75.902-3.325.902-7.726v-1.39l-.016-2.013c0-2.352-.415-3.846-1.246-4.48-.829-.635-2.786-.953-5.867-.953M221.61 0c4.23 0 6.873.588 7.933 1.762 1.06 1.177 1.59 4.118 1.59 8.82 0 5.068-.507 8.195-1.524 9.382-1.016 1.186-3.682 1.779-7.999 1.779-4.294 0-6.957-.587-7.99-1.764-1.033-1.175-1.548-4.215-1.548-9.115v-1.5l.032-2.013c0-2.829.67-4.763 2.009-5.798C215.45.517 217.949 0 221.609 0M253.127.218v21.307h-4.147l-9.376-14.5-1.523-2.39-.754-1.186-.753-1.186h-.067l.017.796.015.812v17.654h-2.521V.218h4.129l8.177 12.707 2.13 3.34 1.067 1.655 1.05 1.67h.063l-.015-.796-.017-.813V.218z"
                />
                <path
                  d="M257.389 21.525h2.522V.22h-2.522zM278.892 14.407h2.506v.811c0 2.903-.517 4.718-1.555 5.44-1.04.724-3.65 1.085-7.835 1.085-3.748 0-6.13-.637-7.145-1.912-1.017-1.275-1.526-4.274-1.526-8.999 0-3.694.116-6.017.345-6.969.23-.953.886-1.803 1.966-2.552 1.267-.875 4.006-1.312 8.213-1.312 2.851 0 4.772.422 5.76 1.264.99.844 1.482 2.472 1.482 4.886l.019.579h-2.509l-.016-.656c0-1.717-.293-2.821-.877-3.31-.586-.489-1.904-.733-3.96-.733-3.605 0-5.804.286-6.604.858-.796.573-1.196 2.16-1.196 4.761 0 5.983.267 9.49.803 10.52.536 1.03 2.367 1.545 5.49 1.545 2.973 0 4.827-.223 5.565-.67.738-.448 1.105-1.57 1.105-3.371l-.031-1.265ZM299.592 5.994h-2.509c0-1.718-.3-2.808-.902-3.271-.599-.463-2.013-.694-4.243-.694-2.645 0-4.35.22-5.113.663-.766.442-1.15 1.429-1.15 2.958 0 1.718.303 2.763.903 3.137.6.376 2.388.63 5.36.765 3.485.145 5.7.567 6.646 1.265.944.697 1.417 2.258 1.417 4.682 0 2.623-.543 4.32-1.631 5.09-1.087.769-3.488 1.154-7.204 1.154-3.221 0-5.367-.387-6.432-1.163-1.065-.775-1.598-2.339-1.598-4.69l-.016-.952h2.508v.53c0 1.904.305 3.088.917 3.551.612.464 2.18.695 4.705.695 2.894 0 4.675-.231 5.342-.695.665-.463.999-1.698.999-3.706 0-1.302-.227-2.168-.679-2.6-.453-.431-1.403-.69-2.844-.772l-2.623-.124-2.49-.126c-3.792-.25-5.688-2.123-5.688-5.62 0-2.424.552-4.042 1.656-4.854C286.026.405 288.229 0 291.528 0c3.343 0 5.522.377 6.54 1.131 1.016.755 1.524 2.375 1.524 4.863M32.047 8.433l-2.336-.168c-1.494-.11-2.243-.168-2.243-1.797 0-1.08.156-1.74 3.228-1.74 2.247 0 3.088 0 3.088 2.11v.056h5.508v-.93c0-5.956-4.177-5.956-8.596-5.956-5.576 0-8.961.438-8.961 6.489 0 5.864 2.904 6.064 7.715 6.396l1.987.131c2.456.157 2.713.173 2.713 1.898 0 1.732-.843 1.878-3.454 1.878-2.777 0-3.48-.23-3.48-2.354v-.057h-5.509v.057c0 7.08 3.77 7.08 8.99 7.08 4.175 0 6.729-.67 8.032-2.113 1.153-1.275 1.153-3.021 1.153-4.707v-.149c0-4.902-1.575-5.669-7.835-6.124M13.301 8.195H5.776V.344H0v21.181h5.776v-8.317H13.3v8.317h5.775V.344h-5.775zM48.297 5.341h4.73c1.362 0 2.303.257 2.584.702.172.277.576 1.31.576 4.901 0 3.325-.404 4.426-.645 4.785-.333.499-1.31.774-2.752.774h-4.493V5.341ZM60.06 2.383C58.746 1.016 56.51.322 53.427.322H42.515v21.203h11.03c3.569 0 5.844-.815 6.959-2.489 1.024-1.544 1.523-4.75 1.523-9.798 0-3.237-.642-5.477-1.966-6.855Z"
                  mask="url(#d)"
                />
              </g>
            </svg>
          </div>
        </div>
        <nav
          className="c5"
        >
          <a
            href="/"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M0 0h23.795v23.795H0z"
                      />
                    </defs>
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <path
                        d="M25.267 46.753c2.993 0 5.812.795 8.247 2.173l13.5-13.5c-4.447-3.9-9.886-6.644-15.872-7.786l-6.024 6.296-6.11-6.384C12.985 28.608 7.508 31.29 3 35.128L16.872 49a16.772 16.772 0 0 1 8.395-2.247Z"
                        fill="currentColor"
                      />
                      <g
                        transform="translate(13.308 1)"
                      >
                        <path
                          d="M23.795 11.898c0 6.57-5.327 11.897-11.897 11.897C5.327 23.795 0 18.468 0 11.898 0 5.327 5.327 0 11.898 0c6.57 0 11.897 5.327 11.897 11.898"
                          fill="currentColor"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Carriere
                </span>
              </div>
            </div>
          </a>
          <a
            href="/"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M38.238 17.793H27.476a1.412 1.412 0 0 1-1.415-1.414c0-.809.657-1.415 1.415-1.415h10.762c.808 0 1.415.657 1.415 1.415s-.607 1.414-1.416 1.414Zm0 8.792H27.476a1.412 1.412 0 0 1-1.415-1.415c0-.757.657-1.414 1.415-1.414h10.762c.808 0 1.415.657 1.415 1.414 0 .758-.607 1.415-1.416 1.415Zm0 8.842H27.476a1.412 1.412 0 0 1-1.415-1.415c0-.808.657-1.414 1.415-1.414h10.762c.808 0 1.415.657 1.415 1.414 0 .758-.607 1.415-1.416 1.415Zm-18.139 2.476-3.385.758a2.328 2.328 0 0 1-2.173-.708c-.556-.606-1.212-1.414-1.566-2.071-1.718-2.93-2.627-6.72-2.627-10.712 0-3.991.909-7.78 2.627-10.66.354-.658 1.061-1.466 1.566-2.072.506-.607 1.365-.86 2.122-.708l3.386.657a1.461 1.461 0 0 1 1.111 1.92l-1.516 4.85c-.202.708-.909 1.113-1.617 1.011l-2.627-.303c-.505 1.718-.859 3.183-.859 5.305 0 2.021.303 3.487.809 5.255l2.678-.354c.707-.101 1.414.354 1.617 1.01l1.566 4.851c.252.91-.253 1.769-1.112 1.97v.001ZM45.109 4H4.891A3.892 3.892 0 0 0 1 7.89V42.4a3.892 3.892 0 0 0 3.89 3.89h40.22A3.892 3.892 0 0 0 49 42.4V7.89A3.892 3.892 0 0 0 45.109 4Z"
                      fill="currentColor"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Contatti
                </span>
              </div>
            </div>
          </a>
          <a
            href="/"
          >
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlnsXlink="http://www.w3.org/1999/xlink"
                  >
                    <defs>
                      <path
                        d="M0 0h47.956v48H0z"
                      />
                    </defs>
                    <g
                      fill="none"
                      fillRule="evenodd"
                    >
                      <g
                        transform="translate(1 1)"
                      >
                        <path
                          d="M20.579 3.389A17.278 17.278 0 1 1 3.3 20.668 17.3 17.3 0 0 1 20.58 3.389Zm0 37.901a20.42 20.42 0 0 0 13.377-4.927l11.148 11.148a1.672 1.672 0 0 0 2.363-2.363L36.319 34a20.425 20.425 0 0 0 4.927-13.377 20.624 20.624 0 1 0-20.623 20.623l-.044.044Z"
                          fill="currentColor"
                        />
                      </g>
                      <path
                        d="M17.39 34.101a1.174 1.174 0 0 0 0-2.348 5.103 5.103 0 0 1-5.089-5.088 1.174 1.174 0 0 0-2.348 0 7.436 7.436 0 0 0 7.437 7.436"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Ricerca
                </span>
              </div>
            </div>
          </a>
          <a
            href="/"
          >
            <div
              className="c11"
            >
              <div
                className="c7"
              >
                <span
                  className="c8"
                  size="100%"
                >
                  <svg
                    viewBox="0 0 50 50"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="currentColor"
                      fillRule="evenodd"
                    >
                      <path
                        d="M24 47.352C11.698 47.352 1.648 37.302 1.648 25S11.698 2.648 24 2.648 46.352 12.698 46.352 25 36.302 47.352 24 47.352ZM24 1C10.764 1 0 11.764 0 25s10.764 24 24 24 24-10.764 24-24S37.236 1 24 1Z"
                      />
                      <path
                        d="M16.115 24.224h7.117v-6.107c-2.201-.052-4.3-.31-6.195-.776-.512 2.121-.87 4.45-.922 6.883ZM17.447 15.84a29.01 29.01 0 0 0 5.785.724V5.904c-1.69.983-4.25 4.76-5.785 9.936ZM14.58 25.776H4.8c.154 4.037 1.536 7.711 3.738 10.765 1.484-1.76 3.89-3.157 6.86-4.037a35.544 35.544 0 0 1-.819-6.728ZM38.234 11.959A19.228 19.228 0 0 0 26.97 5.8c1.894 1.967 3.789 5.434 5.069 9.678 2.662-.828 4.863-2.07 6.195-3.52ZM16.883 32.09a30.431 30.431 0 0 1 6.35-.828v-5.486h-7.118c.052 2.226.308 4.348.768 6.314ZM23.232 44.2V32.815c-2.1.051-4.147.31-5.99.776 1.535 5.537 4.249 9.574 5.99 10.609ZM31.885 25.776h-7.117v5.486c2.253.052 4.403.31 6.349.828.46-1.966.717-4.088.768-6.314ZM24.768 5.904v10.66a29.007 29.007 0 0 0 5.786-.724c-1.587-5.175-4.096-8.953-5.786-9.936ZM9.51 37.783A18.861 18.861 0 0 0 20.929 44.2c-1.946-2.07-3.942-5.744-5.171-10.195-2.765.88-4.966 2.173-6.246 3.778ZM24.768 32.815v11.333c1.74-1.035 4.454-5.02 5.99-10.609a31.18 31.18 0 0 0-5.99-.724ZM30.963 17.34c-1.894.466-3.993.725-6.195.777v6.106h7.117c-.051-2.432-.41-4.76-.922-6.882ZM15.962 15.478c1.28-4.244 3.174-7.711 5.069-9.678-4.455.673-8.346 2.95-11.264 6.159 1.33 1.448 3.533 2.69 6.195 3.519ZM15.552 16.978c-2.867-.88-5.273-2.173-6.758-3.83-2.356 3.106-3.84 6.935-3.994 11.076h9.78c.05-2.536.409-4.968.972-7.245ZM32.602 32.504c2.97.931 5.376 2.329 6.86 4.037 2.202-3.054 3.584-6.728 3.738-10.765h-9.78a35.514 35.514 0 0 1-.819 6.728ZM32.192 34.005c-1.229 4.45-3.175 8.125-5.12 10.195 4.506-.725 8.5-3.053 11.418-6.417-1.28-1.605-3.482-2.898-6.298-3.778ZM33.42 24.224h9.78c-.154-4.14-1.639-7.97-3.994-11.075-1.536 1.656-3.89 2.95-6.758 3.83.563 2.276.922 4.709.973 7.245Z"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <div
                className="c9"
              >
                <span
                  className="c10"
                  color="light"
                >
                  Italia
                </span>
              </div>
            </div>
          </a>
          <div
            className="c12"
          >
            <span
              className="c13"
              color="white"
              size="100%"
            >
              <svg
                viewBox="0 0 50 50"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="currentColor"
                  fillRule="evenodd"
                >
                  <rect
                    height={3}
                    rx={1.5}
                    width={48}
                    x={1}
                    y={7}
                  />
                  <rect
                    height={3}
                    rx={1.5}
                    width={48}
                    x={1}
                    y={23}
                  />
                  <rect
                    height={3}
                    rx={1.5}
                    width={48}
                    x={1}
                    y={41}
                  />
                </g>
              </svg>
            </span>
          </div>
        </nav>
      </div>
    </div>
    <div
      className="c14"
    >
      <nav
        className="c15"
      >
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="light"
              size="sm"
            >
              AZIENDA
            </span>
          </a>
        </div>
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="light"
              size="sm"
            >
              PRODOTTI
            </span>
          </a>
        </div>
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="light"
              size="sm"
            >
              SERVIZI
            </span>
          </a>
        </div>
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="light"
              size="sm"
            >
              CASE HISTORY
            </span>
          </a>
        </div>
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="light"
              size="sm"
            >
              HSD NEL MONDO
            </span>
          </a>
        </div>
        <div
          className="c16"
        >
          <a
            href="/"
          >
            <span
              className="c17"
              color="light"
              size="sm"
            >
              NEWS ED EVENTI
            </span>
          </a>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
